<resources>
    <string name="app_name">PixTalk</string>
    <string name="mail">Mail Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="name">Name</string>
    <string name="record">Record</string>
    <string name="generate">Generate</string>
    <string name="swl">Single Word Learning</string>
    <string name="counting">Counting</string>
    <string name="diff">Differentiate</string>
    <string name="qna"><![CDATA[Q & A]]></string>
    <string name="submit">Submit</string>
    <string name="play_audio">Play Audio</string>
    <string name="level_1">Level 1</string>
    <string name="title_activity_signup">PixTalk</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="sign_up">Sign Up</string>
    <string name="sample_text">Text</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="todo">TODO</string>
    <string name="pta">Please try again!</string>

</resources>
