<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:actionBarNavMode="standard"
    tools:context=".Login">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#047BD5"

        android:gravity="center_vertical"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:fontFamily="serif"
        tools:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/mail"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        app:fontFamily="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F7A200"
        android:text="@string/login"
        app:fontFamily="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F7A200"
        android:text="@string/sign_up"
        app:fontFamily="serif" />

</LinearLayout>