<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp" />
    <Button
        android:id="@+id/btnlevel1"
        android:text="@string/level_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F7A200"
        android:fontFamily="serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnlevel2"
        android:text="@string/level_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:fontFamily="serif"/>

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <Button
        android:id="@+id/btnlevel3"
        android:text="@string/level_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ff00"
        android:fontFamily="serif"/>
        />

</LinearLayout>