<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"

    tools:context=".Login">



    <TextView

        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#047BD5"
        android:gravity="center_vertical"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:theme="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
        app:fontFamily="serif"
        tools:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/name"
        android:fontFamily="serif"/>
    <EditText
        android:id="@+id/txtusername"
        android:hint="@string/mail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="serif"/>

    <EditText
        android:id="@+id/txtpassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="serif"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Select an Option"
        android:textColor="#000000"
        android:fontFamily="serif"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton android:id="@+id/radio_care"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Caregiver"
            android:fontFamily="serif"
            />
        <RadioButton android:id="@+id/radio_autistic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Autistic Child"
            android:fontFamily="serif"
            />
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <Button
        android:id="@+id/btnsignup"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:background="#F7A200"
        android:layout_height="60dp"
        android:fontFamily="serif"/>


</LinearLayout>