<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Please record your voice..!"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnrecord"
        android:text="@string/record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:background="#F7A200"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/speech_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sample_text"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btngenerate"
        android:text="@string/generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:background="#F7A200"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp" />



    <ImageView
       android:src="@drawable/ic_launcher_background"
       android:id="@+id/imageview"
       android:layout_width="200dp"
       android:layout_height="200dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/generate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Generated Image"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textAlignment="center"/>


</ScrollView>

</LinearLayout>